--- a/missile_alerts/missile_alerts.html
+++ b/missile_alerts/missile_alerts.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Send Missile Alert</title>
+    <link rel="stylesheet" href="missile_style.css">
 </head>
 
 <body>
 
     <h1>Missile Alerts</h1>
 
-    <a id="real-alert" class="missile-link" href="#">Send Missile Alert</a>
+    <!--Test alert-->
     <a id="test-only" class="missile-link" href="#">Send Test Missile Alert</a>
+
+    <!--Real alert-->
+    <a id="real-alert" class="missile-link" href="#">Send Missile Alert</a>
 
 </body>
 </html>
