--- a/student_feedback_form/student_feedback_form.html
+++ b/student_feedback_form/student_feedback_form.html
@@ -3,35 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Student Feedback</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+
+    <!-- add css file styles after bootstrap-->
+    <link href="feedback_styles.css" type="text/css" rel="stylesheet">
+
 </head>
 
-<body>
+<body class="m-3">
 
-    <h1>Please provide feedback. You may do so anonymously.</h1>
+    <div class="bg-success-subtle mb-4 p-3 rounded-2">
+        <h1>Please provide feedback. You may do so anonymously.</h1>
+    </div>
 
     <form>
-        <div>
-            <label for="name">Name</label> <input id="name">
-            <br>
-            <label for="email">Email</label> <input id="email" type="email">
-            <br>
-            <label for="comments">Comments</label>
-            <br> <textarea id="comments" required></textarea>
+
+        <label class="form-label" for="name">Name</label>
+        <input class="form-control" id="name" name="name">
+        <br>
+        <label class="form-label" for="email">Email</label>
+        <input class="form-control" id="email" type="email" name="email">
+        <br>
+        <label class="form-label" for="comments">Comments</label>
+        <br> <textarea class="form-control" id="comments" required></textarea>
+
+        <br>
+
+        <p class="mx-2">Are you a current student?</p>
+
+        <div class="form-check">
+            <input class="form-check-input" name="current-student" id="yes" type="radio" checked>
+            <label for="yes">Yes</label>
         </div>
 
-        <div>
-            <br>
-            Are you a current student?
-            <br>
-            <input name="current-student" id="yes" type="radio" checked>
-            <label for="yes">Yes</label>
-            <input name="current-student" id="no" type="radio">
+        <div class="form-check">
+            <input class="form-check-input" name="current-student" id="no" type="radio">
             <label for="no">No</label>
         </div>
 
-        <div>
-            <input type="submit">
-        </div>
+        <br>
+
+        <input class="btn btn-primary" type="submit">
+
     </form>
 
 </body>
