--- a/student_feedback_form/student_feedback_form.html
+++ b/student_feedback_form/student_feedback_form.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Student Feedback</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Play&family=Wire+One&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -17,40 +21,53 @@
 
 <body class="m-3">
 
-    <div class="bg-success-subtle mb-4 p-3 rounded-2">
+    <div class="header bg-success-subtle mb-4 p-3 rounded-2 text-center">
         <h1>Please provide feedback. You may do so anonymously.</h1>
     </div>
 
-    <form>
+    <div class="row">
 
-        <label class="form-label" for="name">Name</label>
-        <input class="form-control" id="name" name="name">
-        <br>
-        <label class="form-label" for="email">Email</label>
-        <input class="form-control" id="email" type="email" name="email">
-        <br>
-        <label class="form-label" for="comments">Comments</label>
-        <br> <textarea class="form-control" id="comments" required></textarea>
+        <div class="col-md-3"> <!--md - medium screen or smaller, stack cols / 3 is width out of 12-->
+            <h2>Instructions</h2>
 
-        <br>
+            <p>As one of our students, your thoughts, feedback, and comments are important to us.</p>
+            <p>Please send them using this form.</p>
+            <p>If you would like us to follow up with you, please include your contact information.</p>
+        </div> <!--end of instructions col div-->
 
-        <p class="mx-2">Are you a current student?</p>
+        <div class="col-md-9">
+            <form>
 
-        <div class="form-check">
-            <input class="form-check-input" name="current-student" id="yes" type="radio" checked>
-            <label for="yes">Yes</label>
-        </div>
+                <label class="form-label" for="name">Name</label>
+                <input class="form-control" id="name" name="name">
+                <br>
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control" id="email" type="email" name="email">
+                <br>
+                <label class="form-label" for="comments">Comments</label>
+                <br> <textarea class="form-control" id="comments" required></textarea>
 
-        <div class="form-check">
-            <input class="form-check-input" name="current-student" id="no" type="radio">
-            <label for="no">No</label>
-        </div>
+                <br>
 
-        <br>
+                <p class="mx-2">Are you a current student?</p>
 
-        <input class="btn btn-primary" type="submit">
+                <div class="form-check">
+                    <input class="form-check-input" name="current-student" id="yes" type="radio" checked>
+                    <label for="yes">Yes</label>
+                </div>
 
-    </form>
+                <div class="form-check">
+                    <input class="form-check-input" name="current-student" id="no" type="radio">
+                    <label for="no">No</label>
+                </div>
+
+                <br>
+
+                <input class="btn btn-primary btn-lg" type="submit">
+
+            </form>
+        </div> <!--end of form col div-->
+    </div> <!--end of row div that contains both columns-->
 
 </body>
 </html>
